# rust_web_benchmark

./: README.md
actix/: Cargo.toml  Dockerfile
actix/src/: main.rs
axum/: Cargo.toml
axum/src/: main.rs
bench/: Cargo.toml  run.bat
bench/src/: main.rs
rocket/: Cargo.toml  Dockerfile
rocket/src/: main.rs
